2002-08-10 22:45  huysmans

	* ChangeLog, Makefile.am, Makefile.in, configure, configure.ac,
	panel/Makefile.am, panel/Makefile.in, panel/callbacks.c,
	panel/dialogs.c, panel/dialogs.h, panel/xfce.c: Add info panel by
	Xavier Maillard

2002-08-08 23:27  huysmans

	* panel/builtins.c: Additions to Exit/Lock module

2002-08-08 20:24  huysmans

	* panel/: central.c, dialogs.c, global.h, xfce.c, xfce.h: More
	config options for configuring central panel

2002-08-08 08:05  huysmans

	* panel/: builtins.c, dialogs.c, global.h, module.c, module.h,
	xfce.c, xfce.h: Add option to hide central panel

2002-08-06 20:15  huysmans

	* Makefile.in, aclocal.m4, icons/Makefile.in, panel/Makefile.in,
	panel/central.c, panel/global.h, panel/icons.c, panel/wmhints.c,
	panel/wmhints.h, panel/xfce.c, plugins/Makefile.in,
	plugins/mailcheck/Makefile.in, themes/Makefile.in,
	themes/Gnome/Makefile.am, themes/Gnome/Makefile.in,
	themes/Gnome/miniinfo.png, themes/Gnome/minilock.png,
	themes/Gnome/minipalet.png, themes/Gnome/minipower.png: Add support
	for themeable minibuttons and increased the maximum number of
	groups to 16

2002-08-05 08:18  huysmans

	* ChangeLog, panel/dialogs.c: Don't disable changing number of
	desktops when desktop buttons are hidden

2002-08-04 16:42  huysmans

	* panel/: central.c, central.h, dialogs.c, global.h, xfce.c: Add
	option to hide desktop buttons

2002-07-31 08:41  huysmans

	* panel/: builtins.c, callbacks.c, callbacks.h, central.c,
	dialogs.c, icons.c, icons.h, item.c, item.h, item_dialog.c,
	item_dialog.h, module.c, module.h, move.c, popup.c, popup.h,
	settings.c, side.c, side.h, wmhints.c, xfce.c, xfce_support.c,
	xfce_support.h: Reformat files (missing empty lines at the end) and
	remove panel.h includes. Reported by Biju Chacko

2002-07-29 23:11  huysmans

	* panel/xfce.c: Destroy the panel before restarting or you will end
	up with ghost panels

2002-07-28 20:56  huysmans

	* panel/: side.c, side.h: Change frame in panel group to