@@ -1,3 +1,8 @@
+2002-08-11 08:29  huysmans
+
+	* ChangeLog, icons/xfce_slogan.xpm, panel/info.c: Really add info
+	panel by Xavier Maillard
+
 2002-08-10 22:45  huysmans
 
 	* ChangeLog, Makefile.am, Makefile.in, configure, configure.ac,
